--- a/TOTP/TOTP.Web/ClientApp/public/index.html
+++ b/TOTP/TOTP.Web/ClientApp/public/index.html
@@ -20,7 +20,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>TOTP.Web</title>
+    <title>TOTP - a time based OTP generator</title>
   </head>
   <body>
     <noscript>
